# cggmp21-nostd

./: .gitignore  Cargo.toml  README.md
cggmp21/: Cargo.toml
cggmp21-keygen/: Cargo.toml  build.rs
cggmp21-keygen/src/: errors.rs  lib.rs  non_threshold.rs  non_threshold1.rs  threshold.rs  utils.rs
cggmp21/src/: lib.rs
protos/: keygen.proto
tests/src/keygen/: mod.rs  non_threshold.rs
tests/tests/it/: main.rs
