[package]
name = "cggmp21-keygen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "UC-secure DKG implementation based on CGGMP21 paper"
repository = "https://github.com/dfns/cggmp21"
categories = ["algorithms", "cryptography"]
keywords = ["mpc", "dkg", "threshold-signatures", "tss", "ecdsa", "t-ecdsa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udigest = { version = "0.1", default-features = false, features = ["alloc", "derive"]}
# udigest = { version = "0.1", features = ["std", "derive"]}
thiserror-no-std = "2.0"
embedded-time = "0.12"
digest = "0.10"
hex = { version = "0.4", default-features = false, features = ["serde"] }
generic-ec = { version = "0.2", default-features = false, features = ["alloc"] }
generic-ec-zkp = { version = "0.2", default-features = false, features = ["alloc"] }
# generic-ec = { version = "0.1", features = ["serde", "udigest"] }
# generic-ec-zkp = { version = "0.1", features = ["serde", "udigest"] }
rand_core = "0.6"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"
heapless = "0.8"
# serde = { version = "1", features = ["derive"] }
# prost = "0.12"
# prost-types = { version = "0.12", optional = true }
# serde_with = { version = "3.7" }

[build-dependencies]
prost-build = "0.12"

[features]
