[package]
name = "cggmp21"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TSS ECDSA implementation based on CGGMP21 paper"
categories = ["algorithms", "cryptography"]
keywords = ["mpc", "threshold-signatures", "tss", "ecdsa", "t-ecdsa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cggmp21-keygen = { path = "../cggmp21-keygen", version = "0.1" }
